--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/Users/puthchy/Library/Android/sdk
-flutter.sdk=/usr/local/Caskroom/flutter/3.0.5/flutter
+sdk.dir=C:\\Users\\user\\AppData\\Local\\Android\\Sdk
+flutter.sdk=C:\\src\\flutter
