--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\ASUS\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\ASUS\\Desktop\\Flutter\\sdks\\flutter
+sdk.dir=C:\\Users\\suras\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\src\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
